k8s/cdn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdn-deployment
  labels:
    app: cdn
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cdn
  template:
    metadata:
      labels:
        app: cdn
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
        volumeMounts:
          - name: cdn-storage
            mountPath: "/usr/share/nginx/html"
      volumes:
        - name: cdn-storage
          persistentVolumeClaim:
            claimName: cdn-claim
