k8s/cdn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdn-service
spec:
  selector:
    app: cdn
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
